// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulation fixtures: 1 PC vs 1 enemy (parity with v0.5.0 pair detail) > produces a stable result with focus-fire and fixed seed 1`] = `
{
  "anyPcDownProbability": 0.926,
  "iterationsCompleted": 1000,
  "perEnemy": [
    {
      "damageShare": 0.4124722643933201,
      "id": "troll",
      "name": "troll",
      "topTargetId": "mira",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.004,
      "downProbability": 0.926,
      "id": "mira",
      "meanEndingHp": 0.808,
      "name": "mira",
      "topContributingEnemyId": "troll",
    },
  ],
  "tpkProbability": 0.926,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.585,
  "meanFirstDownRound": 1.3134328358208955,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.4318235587918299,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.024,
      "downProbability": 0.392,
      "id": "mira",
      "meanEndingHp": 17.978,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.013,
      "downProbability": 0.286,
      "id": "seam",
      "meanEndingHp": 17.231,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.016,
      "downProbability": 0.18,
      "id": "jor",
      "meanEndingHp": 12.878,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.021,
      "downProbability": 0.218,
      "id": "elya",
      "meanEndingHp": 11.204,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.023,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 0.425,
  "meanFirstDownRound": 1.321013727560718,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.3522867455567232,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.001,
      "downProbability": 0.045,
      "id": "mira",
      "meanEndingHp": 23.045,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.018,
      "id": "seam",
      "meanEndingHp": 23.522,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.01,
      "downProbability": 0.135,
      "id": "jor",
      "meanEndingHp": 19.911,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.05,
      "downProbability": 0.425,
      "id": "elya",
      "meanEndingHp": 9,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.018,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under predator 1`] = `
{
  "anyPcDownProbability": 0.408,
  "meanFirstDownRound": 1.3104166666666666,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.3525209654906322,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.003,
      "downProbability": 0.043,
      "id": "mira",
      "meanEndingHp": 23.072,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.021,
      "id": "seam",
      "meanEndingHp": 23.46,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.011,
      "downProbability": 0.144,
      "id": "jor",
      "meanEndingHp": 19.576,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.041,
      "downProbability": 0.408,
      "id": "elya",
      "meanEndingHp": 9.276,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.021,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.633,
  "meanFirstDownRound": 1.4492753623188406,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.4919280005331775,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.01,
      "downProbability": 0.416,
      "id": "mira",
      "meanEndingHp": 14.657,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.01,
      "downProbability": 0.392,
      "id": "seam",
      "meanEndingHp": 11.776,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.011,
      "downProbability": 0.352,
      "id": "jor",
      "meanEndingHp": 12.61,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.007,
      "downProbability": 0.36,
      "id": "elya",
      "meanEndingHp": 12.444,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.158,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.539,
  "meanFirstDownRound": 1.5161662817551964,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.5056446188612048,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.008,
      "downProbability": 0.384,
      "id": "mira",
      "meanEndingHp": 14.085,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.335,
      "id": "seam",
      "meanEndingHp": 12.577,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.359,
      "id": "jor",
      "meanEndingHp": 10.074,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.359,
      "id": "elya",
      "meanEndingHp": 9.343,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.202,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.092,
  "perEnemy": [
    {
      "damageShare": 0.018245019550735646,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.04262655469480199,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.06500575845302398,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.08653082085085081,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "mira",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.004,
      "downProbability": 0.059,
      "id": "mira",
      "meanEndingHp": 14.892,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.018,
      "id": "seam",
      "meanEndingHp": 15.327,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.029,
      "id": "jor",
      "meanEndingHp": 14.114,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.026,
      "id": "elya",
      "meanEndingHp": 13.871,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.007,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 0.279,
  "perEnemy": [
    {
      "damageShare": 0.02032264031984657,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.04895479788732129,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.07147468447619083,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.08436368578623285,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0,
      "downProbability": 0.025,
      "id": "mira",
      "meanEndingHp": 23.234,
      "name": "mira",
      "topContributingEnemyId": "mook-3",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.004,
      "id": "seam",
      "meanEndingHp": 23.819,
      "name": "seam",
      "topContributingEnemyId": "mook-3",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.082,
      "id": "jor",
      "meanEndingHp": 19.225,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.006,
      "downProbability": 0.243,
      "id": "elya",
      "meanEndingHp": 10.888,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.002,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under predator 1`] = `
{
  "anyPcDownProbability": 0.289,
  "perEnemy": [
    {
      "damageShare": 0.020602594819402378,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.047978542259994275,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.06925169145457559,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.08617377152931603,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0,
      "downProbability": 0.016,
      "id": "mira",
      "meanEndingHp": 23.295,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.007,
      "id": "seam",
      "meanEndingHp": 23.812,
      "name": "seam",
      "topContributingEnemyId": "mook-2",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.101,
      "id": "jor",
      "meanEndingHp": 18.771,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.008,
      "downProbability": 0.238,
      "id": "elya",
      "meanEndingHp": 10.869,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.007,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.161,
  "perEnemy": [
    {
      "damageShare": 0.019492621668525653,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.04415239167697127,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "seam",
    },
    {
      "damageShare": 0.06654930706758987,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.08348686297078958,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.001,
      "downProbability": 0.113,
      "id": "mira",
      "meanEndingHp": 16.556,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.052,
      "id": "seam",
      "meanEndingHp": 16.227,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.042,
      "id": "jor",
      "meanEndingHp": 16.401,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.045,
      "id": "elya",
      "meanEndingHp": 16.108,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.014,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.069,
  "perEnemy": [
    {
      "damageShare": 0.017672548271917356,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.04047907928034111,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.06299441883038097,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "jor",
    },
    {
      "damageShare": 0.08309009602384997,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.001,
      "downProbability": 0.051,
      "id": "mira",
      "meanEndingHp": 15.046,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.018,
      "id": "seam",
      "meanEndingHp": 15.113,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.021,
      "id": "jor",
      "meanEndingHp": 14.141,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.02,
      "id": "elya",
      "meanEndingHp": 14.148,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.006,
}
`;

exports[`simulation fixtures: degenerate setups > TPK setup converges to high any-PC-down and TPK 1`] = `
{
  "anyPcDownProbability": 1,
  "meanFirstDownRound": 1,
  "tpkProbability": 0.998,
}
`;

exports[`simulation fixtures: degenerate setups > safe setup converges to near-zero down risk 1`] = `
{
  "anyPcDownProbability": 0,
  "tpkProbability": 0,
}
`;
